# nitnem

./: README.md  pyproject.toml
nitnem/: cli.py  nitnemplay.py
tests/: test_nitnem.py
